<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/settings_activity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/mode_radio_buttons"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <RadioButton
                android:id="@+id/dark_mode_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_radio_button"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/light_mode_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_radio_button"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/system_mode_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_radio_button"
                android:textSize="24sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="?android:colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/color_radio_buttons"
            android:textSize="30sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">

            <RadioButton
                android:id="@+id/blue_color_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_radio_button"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/green_color_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green_radio_button"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/orange_color_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orange_radio_button"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/purple_color_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/purple_radio_button"
                android:textSize="24sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="?android:colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/system"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sound_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sound"
            android:textSize="24sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/vibration_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/vibration"
            android:textSize="24sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/animation_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/animation"
            android:textSize="24sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/circulation_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/circulation"
            android:textSize="24sp" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/true_dark_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp"
            android:checked="false"
            android:enabled="false"
            android:text="@string/true_dark"
            android:textSize="24sp" />
</LinearLayout>