<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="120sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/browse_button"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?android:colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/browse_button"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text" />

    <Button
        android:id="@+id/saved_button"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?android:colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/saved_button"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/browse_button" />

    <Button
        android:id="@+id/shuffle_button"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?android:colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/shuffle_button"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saved_button" />



    <Button
        android:id="@+id/settings_button"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="?android:colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/settings_button"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shuffle_button" />

    <TextView
        android:id="@+id/credit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/credit"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>