<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/skill_view_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/skill_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/skill_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/skill_main_frame_placeholder"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:transitionName="shared_transition_frame"
                app:srcCompat="@drawable/icon_frame_blue"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:id="@+id/skill_main_icon_placeholder"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:transitionName="shared_transition_icon"
                app:srcCompat="@drawable/icon_placeholder"
                tools:ignore="ContentDescription,ImageContrastCheck" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/skill_side_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/skill_side_frame_placeholder"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                app:srcCompat="@drawable/icon_frame_blue"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <ImageView
                android:id="@+id/skill_side_icon_placeholder"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                app:srcCompat="@drawable/icon_placeholder"
                tools:ignore="ContentDescription,ImageContrastCheck" />
        </FrameLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/skill_title_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_placeholder"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_container" />

    <TextView
        android:id="@+id/skill_desc_placeholder"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="monospace"
        android:padding="4dp"
        android:text="@string/text_placeholder"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skill_title_placeholder" />

    <LinearLayout
        android:id="@+id/controls_container"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/saved_skills_counter_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/previous_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="?android:colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/previous_arrow_button"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="225dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="?android:colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/save_button"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/next_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="?android:colorPrimary"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/next_arrow_button"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/saved_skills_counter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/saved_skills_counter"
        android:textColor="?app:colorPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>